<resources>
    <string name="app_name">BusinessWeather</string>
    <string name="directionsApiKey">AIzaSyDX8NwkjIOZmHUeanSdexDezRMNCx5pc2M</string>
    <string name="title_activity_home">Home</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="humidity">Humidity : </string>
    <string name="wind_speed">Wind speed : </string>
    <string name="cloud_coverage">Cloud coverage : </string>
    <string name="title_add_location">Location</string>
    <string name="travel_weather">Travel Weather</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="luu_quang_trung">Lưu Quang Trung</string>
    <string name="authentication_fail">Authentication failed!</string>
    <string name="update">Update</string>
    <string name="cancel">Cancel</string>
    <string name="already_in_use">The email address is already in use</string>
    <string name="sign_up_successfull">Sign up successfull !</string>
    <string name="title_favourite_place">Favourite Place</string>
    <string name="favorites">Favorites</string>
    <string name="example_2_places">2 places</string>
    <string name="want_to_go">Want To Go</string>
    <string name="starred_places">Starred Places</string>
    <string name="detail_my_place">Detail Place</string>
    <string name="remove_place">Remove Place</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_directions">Map</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_activity_bottom_navigation">Bottom Navigation</string>
    <string name="splash_travel_weather"><![CDATA[<font color="#00C1A8">Business</font>]]> Weather</string>
    <string name="new_password">New Password</string>
    <string name="toast_click">CLICK</string>
</resources>
