<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@drawable/travel_background"
    android:orientation="vertical"
    android:padding="16dp">


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="6dp"
        android:backgroundTint="@color/overlayBackground">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/all0"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="50dp">
                <TextView
                    android:id="@+id/txt_city_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_margin="10dp"
                    android:text="Name City"
                    android:textColor="@android:color/white"
                    android:textSize="20dp"
                    />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/all"
                android:layout_below="@id/all0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">


                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txt_date_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="6dp"
                        android:layout_marginLeft="10dp"
                        android:text="Monday , 16 pm"
                        android:textColor="@android:color/white"
                        android:textSize="16dp" />


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/img_weather_icon"
                            android:layout_width="50dp"
                            android:layout_height="50dp"
                            android:layout_marginTop="16dp"
                            android:layout_toLeftOf="@id/txt_temperature"
                            android:src="@drawable/background" />

                        <TextView
                            android:id="@+id/txt_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="26 C"
                            android:textColor="@android:color/white"
                            android:textSize="50dp" />
                        <TextView
                            android:id="@+id/txt_main_weather"
                            android:layout_below="@id/txt_temperature"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerHorizontal="true"
                            android:text="Rain"
                            android:textColor="@android:color/white"
                            android:textSize="18sp" />


                    </RelativeLayout>
                </LinearLayout>
            </LinearLayout>

            <RelativeLayout
                android:layout_below="@id/all"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="6dp"
                android:orientation="vertical">


                <TextView
                    android:text="Max :"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_toLeftOf="@id/txt_temp_max"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>





                <TextView
                    android:id="@+id/txt_temp_max"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:text="32 C"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>


                <TextView
                    android:text="Min :"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/txt_temp_max"
                    android:layout_toLeftOf="@id/txt_temp_min"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>





                <TextView
                    android:id="@+id/txt_temp_min"
                    android:layout_below="@id/txt_temp_max"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="16 C"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>

            </RelativeLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>







    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="6dp"
        android:backgroundTint="@color/overlayBackground">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/rv_hourly_weather_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/overlayBackground"/>
    </android.support.v7.widget.CardView>


    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:cardCornerRadius="6dp"
        android:backgroundTint="@color/overlayBackground">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">
            <LinearLayout
                android:id="@+id/linearLayoutCloudCoverage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cloud_coverage"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>

                <TextView
                    android:id="@+id/txt_cloud_cover"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="18sp"
                    tools:text="13%"
                    android:textColor="@android:color/white"/>
            </LinearLayout>


            <LinearLayout
                android:id="@+id/linearLayoutWindSpeed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/wind_speed"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/txt_wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="4,5 m/s"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearLayoutHumidity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textColor="@android:color/white"
                    android:textSize="18sp"/>

                <TextView
                    android:id="@+id/txt_humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="34%"
                    android:textSize="18sp"
                    android:textColor="@android:color/white"/>
            </LinearLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

</LinearLayout>